# trakt-tv-updater

./: .gitignore  Cargo.toml  diesel.toml  title.basics.randomsample
migrations/2023-06-30-020357_create_trakt_cache/: down.sql  up.sql
migrations/2023-06-30-042214_tmdb_progress/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs  tmdb_reader.rs  trakt_cache.rs
src/interface/: app.rs  event.rs  handler.rs  mod.rs  tui.rs  ui.rs  ui_traits.rs
src/sources/: imdb_reader.rs  mod.rs
src/trakt/: mod.rs  t_api.rs  t_db.rs
