[package]
name = "trakt-tv-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
crossterm = "0.26.1"
diesel = { version = "2.1.0", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
futures = "0.3.28"
governor = "0.5.1"
nonzero_ext = "0.3.0"
polars = { version = "0.30.0", features = ["lazy", "csv", "is_in", "streaming"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["full"] }
tui-input = "0.7.1"

[dependencies.ratatui]
# version = "0.22.0" # on release, switch to this?
# using git dep directly so we can use scrollbar
git = "https://github.com/tui-rs-revival/ratatui"
rev = "2f4413be6e32f27b3fb6adf0945f652bccd2c421"
features = ["crossterm", "all-widgets"]
