[package]
name = "trakt-tv-updater"
version = "0.1.0"
edition = "2021"

# make sure to use nightly (how do i enforce this? rust-toolchain.toml?)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std", "serde"] }
color-eyre = "0.6"
crossterm = "0.26.1"
csv = "1.2.2"
diesel = { version = "2.1.0", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15.7"
eyre = "0.6"
futures = "0.3.28"
governor = "0.5.1"
log = "0.4.19"
nonzero_ext = "0.3.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
simplelog = "0.12.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "sync"] }
tui-input = "0.7.1"

[dependencies.ratatui]
# version = "0.22.0" # on release, switch to this?
# using git dep directly so we can use scrollbar
git = "https://github.com/tui-rs-revival/ratatui"
rev = "2f4413be6e32f27b3fb6adf0945f652bccd2c421"
features = ["crossterm", "all-widgets"]
